--- a/style.css
+++ b/style.css
@@ -80,6 +80,11 @@ header {
   transition: background-color 0.2s;
 }
 
+.nav-button:focus {
+  outline-style: none;
+  box-shadow: 0px 0px 0px 4px rgb(255, 180, 180);
+}
+
 #login {
   background-color: white;
   color: #c8102e;
