--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ input:focus {
   margin: 1rem auto;
   display: flex;
   gap: 0.5rem;
-  font-size: 0.85rem;
+  font-size: 0.75rem;
   color: rgb(137, 108, 108);
 }
 
@@ -238,7 +238,8 @@ input[type="checkbox"] ~ label {
   flex: 1;
 }
 
-.red {
+.red a {
+  text-decoration: none;
   color: #c8102e;
 }
 
@@ -251,6 +252,90 @@ button[type="submit"] {
   width: 100%;
   font-family: sofia_pro, Helvetica, Arial, sans-serif;
   font-size: 1.125rem;
+}
+
+#not-yours {
+  margin: 2rem;
+  font-size: 0.75rem;
+  text-align: center;
+}
+
+footer {
+  padding: 0 5rem 3rem 5rem;
+  background-color: #f4f4f4;
+  margin-top: 7rem;
+}
+
+h5 {
+  font-size: 1rem;
+  margin: 0.3rem 0;
+}
+
+#footer-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 0;
+}
+
+.footer-tiles {
+  padding: 3rem 0;
+  border-bottom: 1px solid rgb(228, 227, 227);
+}
+
+.footer-tiles-3 {
+  margin-top: 1.5rem;
+}
+
+footer a {
+  text-decoration: none;
+}
+
+.upper-footer-link {
+  color: #c8102e;
+}
+
+.upper-footer-link:hover {
+  text-decoration: underline;
+}
+
+.bottom-footer-link {
+  color: #572d2d;
+  display: block;
+  margin: 0.5rem 0;
+}
+
+.bottom-footer-link:hover {
+  text-decoration: underline;
+}
+
+#socials {
+  display: flex;
+  margin-left: -0.7rem;
+  gap: 1rem;
+}
+
+.social-icons {
+  display: flex;
+  height: 2rem;
+  width: 2rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-icons a {
+  color: #572d2d;
+  margin: 1rem;
+}
+
+.social-icons:hover {
+  background-color: #c8102e;
+  color: white; 
+  /* How do we get this to work?? */
+  border-radius: 100%;
+}
+
+.social-icons a:hover {
+  color: white;
 }
 
 @media only screen and (max-width: 815px) {
@@ -266,22 +351,31 @@ button[type="submit"] {
     height: 3.5rem;
     padding: 0;
   }
+
   #account {
     display: block;
   }
+
   main {
     max-width: 20rem;
   }
+
   h1 {
     font-size: 1.9rem;
     margin-top: 1.5rem;
   }
+
   h2 {
     font-size: 1.625rem;
     margin-top: -0.9rem;
     margin-bottom: 1.7rem;
   }
+
   #existing-account {
     margin: 0;
+  }
+
+  footer {
+    display: none;
   }
 }
