--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ body {
 }
 
 /* TOP NAV  */
+#fixed-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+}
 
 header {
   height: 5rem;
@@ -129,7 +136,7 @@ header {
 
 main {
   max-width: 25rem;
-  margin: 0 auto;
+  margin: 8rem auto 0;
 }
 
 h1 {
