--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ h2 {
 }
 
 .form-field {
-  margin: 1rem auto;
+  margin: 2rem auto;
   position: relative;
 }
 
@@ -236,23 +236,18 @@ input:focus {
 }
 
 .checkbox-field {
-  margin: 1rem auto;
   gap: 0.5rem;
   font-size: 0.75rem;
   color: rgb(137, 108, 108);
   display: flex;
 }
 
-.checkbox-field label {
-  width: 23rem;
-}
-
 input[type="checkbox"] {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1rem;
+  height: 1rem;
 }
 
-input[type="checkbox"] ~ label {
+input[type="checkbox"] ~ .label-container {
   flex: 1;
 }
 
@@ -281,6 +276,11 @@ button[type="submit"] {
 .error-message {
   color: #c8102e;
   font-size: 0.7rem;
+  position: absolute;
+}
+
+.checkbox-field .error-message {
+  position: static;
 }
 
 footer {
