--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ header {
   transition: background-color 0.2s;
 }
 
-.nav-button:focus {
+button:focus {
   outline-style: none;
   box-shadow: 0px 0px 0px 4px rgb(255, 180, 180);
 }
