organize everything and make empty page for menu

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "sofia_pro";
-  src: url("sofia_pro_black.otf") format("opentype");
+  src: url("../fonts/sofia_pro_black.otf") format("opentype");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "sofia_pro";
-  src: url("sofia_pro_bold.otf") format("opentype");
+  src: url("../fonts/sofia_pro_bold.otf") format("opentype");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: "sofia_pro";
-  src: url("sofia_pro_regular.otf") format("opentype");
+  src: url("../fonts/sofia_pro_regular.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
   font-family: "greasepencil";
-  src: url("greasepencil.otf") format("opentype");
+  src: url("../fonts/greasepencil.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
 }
