--- a/public/css/confirm-otp.css
+++ b/public/css/confirm-otp.css
@@ -1,27 +1,33 @@
 main {
   max-width: 25rem;
-  margin: 8rem auto 0;
+  margin: 14.5rem auto 0;
+  height: 32rem;
+  text-align: center;
+  gap: 1rem;
 }
 
 h1 {
   font-family: sofia_pro, Helvetica, Arial, sans-serif;
   color: #572d2d;
-  font-size: 3rem;
+  font-size: 3.5rem;
   text-align: center;
   margin-bottom: 0;
   white-space: nowrap;
-  letter-spacing: -2px;
+  font-weight: normal;
 }
 
 h2 {
   color: #572d2d;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   text-align: center;
-  margin-top: -1.9rem;
-  line-height: 1;
-  margin-bottom: 0.8rem;
+  line-height: 1.5rem;
+  margin-bottom: 2rem;
   font-weight: normal;
 }
+/* 
+.bold {
+  font-weight: bold;
+} */
 
 input[type="text"] select {
   width: 100%;
@@ -36,6 +42,33 @@ input[type="text"] select {
 
 input[type="text"].invalid {
   border-color: #c8102e;
+}
+
+#enter-code {
+  font-size: 1.1rem;
+}
+
+#code {
+  height: 3rem;
+  width: 25rem;
+  background-color: rgb(216, 215, 215);
+  border: 1px transparent;
+  border-radius: 5px;
+  margin: 0.7rem 0;
+}
+
+#code:focus {
+  outline: 1px solid #c8102e;
+}
+
+#error-message {
+  color: #c8102e;
+  font-size: 1rem;
+}
+
+#no-code {
+  font-weight: 700;
+  font-size: 0.9rem;
 }
 
 @media only screen and (max-width: 815px) {
