--- a/public/css/confirm-otp.css
+++ b/public/css/confirm-otp.css
@@ -55,6 +55,10 @@ input[type="text"].invalid {
   border: 1px transparent;
   border-radius: 5px;
   margin: 0.7rem 0;
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: bold;
+  letter-spacing: 1.5rem;
 }
 
 #code:focus {
