--- a/public/css/floating-inputs.css
+++ b/public/css/floating-inputs.css
@@ -1,3 +1,8 @@
+.form-field {
+  margin: 2rem auto;
+  position: relative;
+}
+
 input[type="text"],
 input[type="email"],
 select {
@@ -50,4 +55,10 @@ select ~ label {
 
 input:focus {
   outline-style: none;
+}
+
+.error-message {
+  color: #c8102e;
+  font-size: 0.7rem;
+  position: absolute;
 }
