use button css in header

--- a/public/css/button.css
+++ b/public/css/button.css
@@ -6,7 +6,7 @@
   padding: 1rem 3rem;
   font-family: sofia_pro, Helvetica, Arial, sans-serif;
   cursor: pointer;
-  transition: background-color 0.2s;
+  transition: background-color 0.2s, border-color 0.2s;
   display: block;
 }
 
@@ -35,7 +35,10 @@
 }
 
 .button.md {
-  font-size: 1.125rem;
+  font-size: 0.9rem;
+  width: 5.5rem;
+  padding: 0.25rem;
+  height: 2.25rem;
 }
 
 .button.lg {
