--- a/public/css/header.css
+++ b/public/css/header.css
@@ -17,6 +17,12 @@ header {
   position: relative;
 }
 
+#logo-link {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
 #logo {
   height: 39%;
 }
@@ -96,7 +102,7 @@ header {
     padding: 0;
   }
 
-  #logo {
+  #logo-link {
     margin: 0 auto;
   }
 
