--- a/public/css/global.css
+++ b/public/css/global.css
@@ -10,7 +10,6 @@ body {
   font-family: sofia_pro, Helvetica, Arial, sans-serif;
 }
 
-button:focus {
-  outline-style: none;
-  box-shadow: 0px 0px 0px 4px rgb(255, 180, 180);
+.hidden {
+  display: none !important;
 }
