--- a/public/css/global.css
+++ b/public/css/global.css
@@ -10,6 +10,10 @@ body {
   font-family: sofia_pro, Helvetica, Arial, sans-serif;
 }
 
+.display-none {
+  display: none !important;
+}
+
 .hidden {
   visibility: hidden !important;
   opacity: 0 !important;
