--- a/public/css/loading-screen.css
+++ b/public/css/loading-screen.css
@@ -1,8 +1,18 @@
-#loading {
+.loading {
   display: flex;
   gap: 0.5rem;
   justify-content: center;
-  color: #c8102e;
+}
+
+.red {
+  color: #c8102e !important;
+}
+
+.white {
+  color: white !important;
+}
+
+#full-page-loading-container {
   margin: 20rem auto;
   grid-column: 1 / -1;
 }
@@ -11,19 +21,19 @@
   font-size: 0.8rem;
 }
 
-#loading span {
+.loading span {
   animation: dance 0.6s ease alternate infinite;
 }
 
-#loading span:nth-child(1) {
+.loading span:nth-child(1) {
   animation-delay: -0.5s;
 }
 
-#loading span:nth-child(2) {
+.loading span:nth-child(2) {
   animation-delay: -0.3s;
 }
 
-#loading span:nth-child(3) {
+.loading span:nth-child(3) {
   animation-delay: -0.1s;
 }
 
